--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "waves-music-app",
   "version": "0.1.0",
   "engines": {
-    "node": "14.x"
+    "node": "14.17.1",
+    "npm": "6.14.13"
   },
   "private": true,
   "dependencies": {
